parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Organizations.Manager/content/Views/Organization/_UserActions.cshtml.pp
<div class="user-actions">
    asdf
</div>